# zabbix-bgmot-2fa

./: .gitignore  ChangeLog  Makefile.am  README  README-bg.md  README.md  README.orig  build-backend.xml  build.xml  configure.ac  sonar-project.properties
.github/workflows/: sonarcloud-PHP.yml  (+1 more)
bg-scripts/: bg-features-install.sh  db-rename-columns.sql  db-update-pg.sql  db-update.sql
conf/: zabbix_server.conf
go/src/: Makefile.am
go/src/pkg/zbxlib/: checks.go  globals_darwin.go  globals_linux.go
go/src/zabbix/cmd/mock_server/: Makefile.am
go/src/zabbix/cmd/zabbix_agent2/: Makefile.am
go/src/zabbix/internal/agent/: Makefile.am
go/src/zabbix/internal/agent/statuslistener/: Makefile.am
go/src/zabbix/pkg/glexpr/: Makefile.am
go/src/zabbix/pkg/version/: version.go
go/src/zabbix/pkg/zbxcomms/: Makefile.am  comms.go
include/: cfg.h  common.h  comms.h  db.h  dbcache.h  dbschema.h  discovery.h  disk.h  export.h  memalloc.h  module.h  mutexs.h  perfmon.h  preproc.h  proxy.h  symbols.h  sysinc.h  sysinfo.h  threads.h  version.h  zbx_dbversion_constants.h  zbxalgo.h  zbxcacheconfig.h  zbxcachevalue.h  zbxcommon.h  zbxdb.h  zbxdbhigh.h  zbxdbupgrade.h  zbxeval.h  zbxhistory.h  zbxhttp.h  zbxipcservice.h  zbxjson.h  zbxmedia.h  zbxmutexs.h  zbxnix.h  zbxregexp.h  zbxserialize.h  zbxserver.h  zbxservice.h  (+3 more)
m4/: ax_lib_mysql.m4  cmocka.m4  libxml2.m4  libyaml.m4  times.m4
man/: zabbix_agent2.man  zabbix_agentd.man  zabbix_get.man  zabbix_js.man  zabbix_proxy.man  zabbix_sender.man  zabbix_server.man
src/: Makefile.am
src/zabbix_es/: Makefile.am  zabbix_es.c
tests/: conf_tests.m4  zbxmockassert.c  zbxmockassert.h  zbxmockcomm.c  zbxmockdata.c  zbxmockdata.h  zbxmockdb.c  zbxmockfile.c  zbxmockjson.c  zbxmocklog.c  zbxmockstat.c  zbxmocktest.c  zbxmocktest.h  zbxmockutil.c  zbxmockutil.h
ui/: disc_prototypes.php  duo.php  ggl.php  graphs.php  host_discovery.php  host_prototypes.php  hostinventories.php  httpconf.php  index.php  index_http.php  index_sso.php  items.php  jsLoader.php  jsrpc.php  report2.php  report4.php  templates.php  toptriggers.php  trigger_prototypes.php  triggers.php
(+2804 files in other folders)
